--- a/lib/src/modes/v8/descriptions.html
+++ b/lib/src/modes/v8/descriptions.html
@@ -5,7 +5,10 @@
       <style type='text/css' scoped>
         div[data-hir], div[data-lir] { display: none; };
       </style>
-
+      <div data-hir="CheckMaps" data-lir="check-maps">
+        <p>Checks whether value's hidden class matches expected value and deoptimizes if this is not the case.</p>
+        <p>Deoptimization at <code>CheckMaps</code> usually indicates that the code is polymorphic.</p>
+      </div>
       <div data-hir="SoftDeoptimize" data-lir="deoptimize">
         <p>When executed this instruction always deoptimizes.</p>
         <p>V8 generates then on control flow paths that were never executed before and thus contain no actionable type feedback that could be used to optimize the code.</p>
