Fix Issue 5: move code mode selection dropdown to the tab headers area for easy discoverability.

--- a/lib/src/ui/tabs.html
+++ b/lib/src/ui/tabs.html
@@ -11,6 +11,7 @@
               </a>
             </li>
           </template>
+          <content select=".after-tabs"></content>
         </ul>
       </div>
       <content></content>
