Add filtering capabilities to the methods list.
Fixes issue 7.

--- a/web/hydra.html
+++ b/web/hydra.html
@@ -45,7 +45,10 @@
       <div class="row-fluid">
         <div class="span3">
           <div class="well sidebar-nav">
-            <ul id="methods" class="nav nav-list">
+            <ul class="nav nav-list">
+              <input id="methods-filter" type="text" class="search-query" placeholder="Filter methods">
+              <div id="methods">
+              </div>
             </ul>
           </div><!--/.well -->
         </div>
