Add analytics code to hydra.html page

--- a/web/hydra.html
+++ b/web/hydra.html
@@ -124,5 +124,17 @@
     <script type="text/javascript" src="packages/browser/dart.js"></script>
     <form id="compilation-artifact-form"><input type="file" id="compilation-artifact" multiple="multiple" style="opacity: 0;"></form>
     <form id="llprof-artifact-form"><input type="file" id="llprof-artifact" style="opacity: 0;"></form>
+
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-6701581-5']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
   </body>
 </html>
