Add interp.'s script to the hydra.html

--- a/web/hydra.html
+++ b/web/hydra.html
@@ -121,8 +121,9 @@
     <script type="text/javascript" src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/js/bootstrap.js"></script>
 
     <script type="application/dart" src="hydra.dart"></script>
-    <script src="packages/browser/interop.js"></script> 
+    <script type="text/javascript" src="packages/browser/interop.js"></script>
     <script type="text/javascript" src="packages/browser/dart.js"></script>
+
     <form id="compilation-artifact-form"><input type="file" id="compilation-artifact" multiple="multiple" style="opacity: 0;"></form>
     <form id="llprof-artifact-form"><input type="file" id="llprof-artifact" style="opacity: 0;"></form>
 
