--- a/lib/src/ui/irpane.html
+++ b/lib/src/ui/irpane.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html><body>
-  <element name="x-irpane" constructor="IRPane" extends="div">
-    <template>
-      <style type='text/css' scoped>
-        /**
-         * Styles are in web/css/irpane.css.
-         *
-         * Not using scoped style for now because we need classes be visible
-         * globally to style xref popup the same way and it is currently created
-         * by bootstrap from a raw HTML not a component.
-         */
-      </style>
-      <div style="display: inline-block; position: relative;">
-        <table class="irpane"></table>
-      </div>
-    </template>
-    <script type="application/dart" src='irpane.dart'></script>
-  </element>
-</body></html>
+
+<polymer-element name="ir-pane">
+  <template>
+    <style type='text/css' scoped>
+      /**
+       * Styles are in web/css/irpane.css.
+       *
+       * Not using scoped style for now because we need classes be visible
+       * globally to style xref popup the same way and it is currently created
+       * by bootstrap from a raw HTML not a component.
+       */
+    </style>
+    <div style="display: inline-block; position: relative;">
+      <table id="rows" class="irpane"></table>
+    </div>
+  </template>
+  <script type="application/dart" src='irpane.dart'></script>
+</polymer-element>
