--- a/web/hydra.html
+++ b/web/hydra.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="import" href="packages/irhydra/src/ui/tabs.html">
+    <!-- <link rel="import" href="packages/irhydra/src/ui/tabs.html"> -->
 
     <!--
       IRPane component comes with global CSS styles. See comments
       in irpane.html for details on why we are not using scoped styles
       for now.
-      -->
+     
     <link rel="import" href="packages/irhydra/src/ui/irpane.html">
     <link type="text/css" href="css/irpane.css" rel="stylesheet"/>
 
@@ -26,7 +26,7 @@
 
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/spin.js/1.2.7/spin.min.js"></script>
 
-    <link type="text/css" href="css/hydra.css" rel="stylesheet">
+    <link type="text/css" href="css/hydra.css" rel="stylesheet"> -->
   </head>
   <body>
     <div class="navbar">
