Remove debugging prints. Fix block-mouse-out event

--- a/lib/src/ui/hydra.html
+++ b/lib/src/ui/hydra.html
@@ -95,7 +95,7 @@
             <ir-pane id="irpane" ir="{{ir}}" codeMode="{{codeMode}}"></ir-pane>
           </div>
           <div data-title="Graph" data-href="graph">
-            <graph-pane ir="{{ir}}" on-block-mouse-over="{{showBlockAction}}" on-blockmouseout="{{hideBlockAction}}">
+            <graph-pane ir="{{ir}}" on-block-mouse-over="{{showBlockAction}}" on-block-mouse-out="{{hideBlockAction}}">
             </graph-pane>
           </div>
           <div data-title="Source" data-href="source">
