--- a/lib/src/ui/hydra.html
+++ b/lib/src/ui/hydra.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <polymer-element name="hydra-app">
+  <link rel="import" href="../modes/v8/ui/descriptions.html">
   <link rel="import" href="dropdown-element.html">
   <link rel="import" href="deopt-links.html">
   <link rel="import" href="graph-pane.html">
