--- a/web/index.html
+++ b/web/index.html
@@ -37,6 +37,10 @@
 
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/spin.js/1.3.2/spin.min.js"></script>
 
+    <script src="deps/codemirror-3.21/codemirror.js"></script>
+    <script src="deps/codemirror-3.21/modes/javascript.js"></script>
+    <link rel="stylesheet" href="deps/codemirror-3.21/codemirror.css">
+
     <script src="jquery-2.0.3.js"></script>
     <script src="bootstrap/js/bootstrap.js"></script>
   </head>
