--- a/lib/src/ui/method-list.html
+++ b/lib/src/ui/method-list.html
@@ -80,14 +80,17 @@
 
       h3.deopt-eager {
         color: #C0392B;
+        font-weight: 500 !important;
       }
 
       h3.deopt-lazy {
         color: #F39C12;
+        font-weight: 500 !important;
       }
 
       h3.deopt-soft {
         color: #8E44AD;
+        font-weight: 500 !important;
       }
 
       .toggle {
