--- a/lib/src/ui/tab-pane.html
+++ b/lib/src/ui/tab-pane.html
@@ -80,7 +80,7 @@
             </a>
           </li>
         </template>
-        <content select=".after-tabs"></content>
+        <content id="after-tabs" select=".after-tabs"></content>
       </ul>
     </div>
     <content id="tabs"></content>
