Remove dead file, rename irpane to ir-pane.dart to match other files.

--- a/lib/src/ui/hydra.html
+++ b/lib/src/ui/hydra.html
@@ -5,7 +5,7 @@
   <link rel="import" href="dropdown-element.html">
   <link rel="import" href="deopt-links.html">
   <link rel="import" href="graph-pane.html">
-  <link rel="import" href="irpane.html">
+  <link rel="import" href="ir-pane.html">
   <link rel="import" href="method-list.html">
   <link rel="import" href="open-file-button.html">
   <link rel="import" href="source-pane.html">
