--- a/lib/src/ui/ir-pane.html
+++ b/lib/src/ui/ir-pane.html
@@ -15,5 +15,5 @@
       <table id="rows" class="irpane"></table>
     </div>
   </template>
-  <script type="application/dart" src='irpane.dart'></script>
+  <script type="application/dart" src='ir-pane.dart'></script>
 </polymer-element>
