Remove some useless code that bi-directional data-binding handles for us automatically.

--- a/lib/src/ui/hydra.html
+++ b/lib/src/ui/hydra.html
@@ -108,7 +108,7 @@
           </div>
           <span class="after-tabs" data-when="ir">
             <template if="{{!ir.code.isEmpty}}">
-              <dropdown-element value="{{codeMode}}" on-changed="{{changeCodeModeAction}}">
+              <dropdown-element value="{{codeMode}}">
                 <li><a href="#" data-value="split">Split Disassembly</a></li>
                 <li><a href="#" data-value="inline">Inline Disassembly</a></li>
                 <li><a href="#" data-value="none">Hide Disassembly</a></li>
