Refactor the way source-pane gets method so that correct widgets are used each time.
Generate a slightly more convoluted demo for eager deopt for the case when deoptimization occurred inside an inlined function.

--- a/lib/src/ui/hydra.html
+++ b/lib/src/ui/hydra.html
@@ -103,7 +103,7 @@
             </graph-pane>
           </div>
           <div data-title="Source" data-href="source">
-            <source-pane method="{{currentMethod}}" path="{{sourcePath}}" on-deopt-click="{{showDeoptAction}}">
+            <source-pane path="{{sourcePath}}" on-deopt-click="{{showDeoptAction}}">
             </source-pane>
           </div>
           <span class="after-tabs" data-when="ir">
