Take ordering between deopts into account when sorting methods.
Remove profile loading button for now.

--- a/lib/src/ui/hydra.html
+++ b/lib/src/ui/hydra.html
@@ -65,10 +65,11 @@
         <template if="{{currentFiles != null}}">
           <button href="#" on-click="{{reloadCurrentFiles}}"><i class="fa fa-repeat"></i></button>
         </template>
+        <!-- TODO(mraleph): enable profiles back.
         <template if="{{currentMode != null}}">
           <open-file-button><i class="fa fa-bolt"></i></open-file-button>
         </template>
-
+        -->
         <spinner-element id="spinner"></spinner-element>
       </div>
 
