--- a/lib/src/ui/method-list.html
+++ b/lib/src/ui/method-list.html
@@ -151,7 +151,7 @@
 
       <div class="method-list-footer">
         <input type="text" placeholder="Filter methods" on-key-up="{{filterUpdated}}" on-changed="{{filterChanged}}" value="{{filter}}">
-        <input type="checkbox" class="toggle" checked="{{sortByDeopts}}">
+        <input type="checkbox" class="toggle" checked="{{sortByDeopts}}" data-title="Sort by deopts">
       </div>
     </div>
   </template>
