--- a/lib/src/ui/hydra.html
+++ b/lib/src/ui/hydra.html
@@ -63,7 +63,7 @@
       <div id="header">
         <open-file-button on-opened="{{openCompilation}}" title="Load Compilation Artifacts"><i class="fa fa-folder-open"></i></open-file-button>
         <template if="{{currentFiles != null}}">
-          <button href="#" on-click="{{reloadCurrentFiles}}"><i class="fa fa-repeat"></i></button>
+          <button href="#" on-click="{{reloadCurrentFiles}}" title="Reload Current Files"><i class="fa fa-repeat"></i></button>
         </template>
         <!-- TODO(mraleph): enable profiles back.
         <template if="{{currentMode != null}}">
