--- a/lib/src/ui/tab-pane.html
+++ b/lib/src/ui/tab-pane.html
@@ -55,10 +55,12 @@
         margin-right: 2px;
         line-height: 1.428571429;
         border: 0px solid transparent;
+        text-decoration: none;
       }
 
       #tab-headers > li > a:hover {
         color: #1ABC9C;
+        text-decoration: none;
       }
 
       #tab-headers > li.active > a,
